# Homomorphic-Encryption

./: .gitignore  ApplicationConstants.cpp  ApplicationConstants.h  CMakeLists.txt  Main.cpp  README.md  ThesisEncryption.cpp  ThesisEncryption.h  settings.json
booking/: Booking.cpp  Booking.h  CMakeLists.txt
client/: CMakeLists.txt  Client.cpp  Client.h
demo/: CMakeLists.txt  ClientDemo.cpp  ClientDemo.h  FactoryDemo.cpp  FactoryDemo.h
factory/: CMakeLists.txt  SealEncryptionFactory.cpp  SealEncryptionFactory.h  SealOperations.cpp  SealOperations.h
payment/: BasePayment.cpp  BasePayment.h  CMakeLists.txt  IPayment.h  Invoicing.cpp  Invoicing.h
proto/: RpcClient.cpp  RpcClient.h  RpcServerManager.cpp  RpcServerManager.h  RpcServiceImpl.cpp  RpcServiceImpl.h  buildScript.ps1  communication.proto  dddd.ps1  tempCodeRunnerFile.ps1
provider/: BaseProvider.cpp  BaseProvider.h  CMakeLists.txt  IProvider.h
searching/: CMakeLists.txt  SearchResult.cpp  SearchResult.h  Searching.cpp  Searching.h
transporter/: BaseTransporter.cpp  BaseTransporter.h  CMakeLists.txt  ITransporter.h
user/: Address.cpp  Address.h  CMakeLists.txt  User.cpp  User.h  UserOperations.cpp  UserOperations.h
utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
